fix bug 99081 [ExtractPortFrom sometimes finds ports that are not there] ExtractPortFrom trys to parse the portnumber from url-strings and sometimes it found ports that are none like messageids of news urls, r=dougt@netscape.com, sr=darin@netscape.com